Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-5194

[C++][Plasma] TEST(PlasmaSerialization, GetReply) is failing

    XMLWordPrintableJSON

Details

    Description

      I believe the assertions here are incorrect. You can't use memcmp to compare structs
      On my machine (64bits linux) int are 4 bytes, but the struct fields are 8 bytes aligned, so this line fails:

      ASSERT_EQ(memcmp(&plasma_objects[object_ids[0]], &plasma_objects_return[0],
      sizeof(PlasmaObject)),
      0);

      even though the struct contents are the same.

      Attachments

        Issue Links

          Activity

            People

              thrasibule Guillaume Horel
              thrasibule Guillaume Horel
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 20m
                  1h 20m