ARROW-5194: [C++][Plasma] TEST(PlasmaSerialization, GetReply) is failing

Author: Guillaume Horel <guillaume.horel@gmail.com>

Closes #4203 from thrasibule/fix_test and squashes the following commits:

2d91efd71 <Guillaume Horel> implement operator== for PlasmaObject
b651f3ebf <Guillaume Horel> compare struct fields, not memory layout